face bug when open lastname activity

--- a/app/src/main/res/layout/activity_first_name.xml
+++ b/app/src/main/res/layout/activity_first_name.xml
@@ -10,7 +10,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/FN_listview"
+        android:id="@+id/lv_FirstName"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="98dp" />
