--- a/app/src/main/res/layout/activity_last_name.xml
+++ b/app/src/main/res/layout/activity_last_name.xml
@@ -7,4 +7,11 @@
     tools:context="com.example.nevertry.auto_register.LastName">
 
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lv_LastName"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="98dp"/>
 </RelativeLayout>
